--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
 	"description": "",
 	"main": "app.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "node_modules/.bin/nodemon app.js"
 	},
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"botbuilder": "^3.13.1",
 		"restify": "^6.3.4"
+	},
+	"devDependencies": {
+		"nodemon": "^1.14.11"
 	}
 }
