--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"botbuilder": "^3.13.1",
+		"dotenv": "^4.0.0",
 		"restify": "^6.3.4"
 	},
 	"devDependencies": {
